--- a/src/platform/qt/MemoryView.ui
+++ b/src/platform/qt/MemoryView.ui
@@ -17,73 +17,18 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QComboBox" name="regions">
-       <item>
-        <property name="text">
-         <string>All</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>BIOS (16kiB)</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Working RAM (256kiB)</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Internal Working RAM (32kiB)</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Memory-Mapped I/O</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Palette RAM (1kiB)</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Video RAM (96kiB)</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>OBJ Attribute Memory (1kiB)</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Game Pak (32MiB)</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Game Pak (Waitstate 1)</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Game Pak (Waitstate 2)</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Static RAM (64kiB)</string>
-        </property>
-       </item>
-      </widget>
+      <widget class="QComboBox" name="regions"/>
      </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
        </property>
       </spacer>
      </item>
@@ -126,6 +71,12 @@
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
       </spacer>
      </item>
      <item>
@@ -143,6 +94,12 @@
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
       </spacer>
      </item>
      <item>
@@ -157,6 +114,12 @@
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
       </spacer>
      </item>
      <item>
@@ -170,6 +133,12 @@
       <spacer name="horizontalSpacer_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
        </property>
       </spacer>
      </item>
