--- a/src/platform/qt/TileView.ui
+++ b/src/platform/qt/TileView.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>288</width>
-    <height>269</height>
+    <width>509</width>
+    <height>265</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,43 +23,31 @@
    </item>
    <item row="2" column="0">
     <widget class="QGroupBox" name="groupBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>170</width>
+       <height>192</height>
+      </size>
+     </property>
      <property name="title">
-      <string>Preview</string>
+      <string/>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
-        <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </spacer>
-        </item>
-        <item>
-         <widget class="QGBA::Swatch" name="preview" native="true">
-          <property name="minimumSize">
-           <size>
-            <width>87</width>
-            <height>87</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>0</width>
-            <height>0</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-       </layout>
+       <widget class="QGBA::Swatch" name="preview" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>87</width>
+          <height>87</height>
+         </size>
+        </property>
+       </widget>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
@@ -108,6 +96,12 @@
    </item>
    <item row="0" column="0">
     <widget class="QSlider" name="paletteId">
+     <property name="maximumSize">
+      <size>
+       <width>170</width>
+       <height>16777215</height>
+      </size>
+     </property>
      <property name="maximum">
       <number>15</number>
      </property>
@@ -138,15 +132,9 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>16</width>
-        <height>16</height>
+        <width>282</width>
+        <height>768</height>
        </rect>
-      </property>
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <property name="spacing">
@@ -167,10 +155,16 @@
        <item>
         <widget class="QGBA::TilePainter" name="tiles" native="true">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>256</width>
+           <height>768</height>
+          </size>
          </property>
         </widget>
        </item>
@@ -195,5 +189,22 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>palette256</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>paletteId</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>100</x>
+     <y>54</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>96</x>
+     <y>22</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
