--- a/src/platform/qt/TileView.ui
+++ b/src/platform/qt/TileView.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>509</width>
-    <height>265</height>
+    <width>498</width>
+    <height>335</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -116,7 +116,20 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1" rowspan="3">
+   <item row="3" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="1" rowspan="4">
     <widget class="QScrollArea" name="scrollArea">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
@@ -132,7 +145,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>282</width>
+        <width>271</width>
         <height>768</height>
        </rect>
       </property>
