Qt: Tile viewer improvements, magnification

--- a/src/platform/qt/TileView.ui
+++ b/src/platform/qt/TileView.ui
@@ -21,7 +21,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="3" column="0">
     <widget class="QGroupBox" name="groupBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
@@ -116,7 +116,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="4" column="0">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -129,7 +129,7 @@
      </property>
     </spacer>
    </item>
-   <item row="0" column="1" rowspan="4">
+   <item row="0" column="1" rowspan="5">
     <widget class="QScrollArea" name="scrollArea">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
@@ -145,7 +145,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>271</width>
+        <width>290</width>
         <height>768</height>
        </rect>
       </property>
@@ -185,6 +185,36 @@
      </widget>
     </widget>
    </item>
+   <item row="2" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
+     <item>
+      <widget class="QSpinBox" name="magnification">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="suffix">
+        <string>×</string>
+       </property>
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>4</number>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Magnification</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
   </layout>
  </widget>
  <customwidgets>
@@ -193,6 +223,9 @@
    <extends>QWidget</extends>
    <header>TilePainter.h</header>
    <container>1</container>
+   <slots>
+    <slot>setTileMagnification(int)</slot>
+   </slots>
   </customwidget>
   <customwidget>
    <class>QGBA::Swatch</class>
@@ -216,6 +249,22 @@
     <hint type="destinationlabel">
      <x>96</x>
      <y>22</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>magnification</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>tiles</receiver>
+   <slot>setTileMagnification(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>36</x>
+     <y>83</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>339</x>
+     <y>396</y>
     </hint>
    </hints>
   </connection>
